@@ -4,7 +4,9 @@ Changelog for zest.releaser
 3.15 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Read pypi config not only from the .pypirc file, but also from the
+  setup.cfg file of the package.  Patch by Erico Andrei.
+  [maurits]
 
 
 3.14 (2010-08-26)
